Changed behaviour in RGB Curves node interpolation #81743

Closed
opened 2020-10-15 18:17:44 +02:00 by Simon Thommes · 7 comments
Member

System Information
Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-15 08:00, hash: f1aa55b6e9
Worked: 2.90.1

Short description of error
The interpolation behaviour of the RGB Curves node seems to have changed. This makes shaders inconsistent between versions.
I am not sure when this changed, the behaviour I am comparing it to is from 2.83.5.
Edit: 2.90.1 still seems to show the same behaviour as 2.83.5
image.png

Exact steps for others to reproduce the error
Attached file behaves differently for different versions of Blender:
RGB_Curves_interpolation_test.blend

**System Information** Operating system: Linux-5.4.0-7642-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.28 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-10-15 08:00, hash: `f1aa55b6e9` Worked: 2.90.1 **Short description of error** The interpolation behaviour of the RGB Curves node seems to have changed. This makes shaders inconsistent between versions. I am not sure when this changed, the behaviour I am comparing it to is from 2.83.5. Edit: 2.90.1 still seems to show the same behaviour as 2.83.5 ![image.png](https://archive.blender.org/developer/F8995145/image.png) **Exact steps for others to reproduce the error** Attached file behaves differently for different versions of Blender: [RGB_Curves_interpolation_test.blend](https://archive.blender.org/developer/F8995138/RGB_Curves_interpolation_test.blend)
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Sybren A. Stüvel self-assigned this 2020-10-15 18:35:22 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Oh gosh...

@dr.sybren I'm pretty sure this is caused by da95d1d851. It modifies correct_bezpart() which is also called as part of by curve-map curve evaluation, not just for FCurves.

Now here comes the fun: We use curve-maps in many places - modifiers, brush falloffs, particles, motion-blur shutter, ... Most of it stored in files. We may have broken compatibility for many files.

Oh gosh... @dr.sybren I'm pretty sure this is caused by da95d1d851. It modifies `correct_bezpart()` which is also called as part of by curve-map curve evaluation, not just for FCurves. Now here comes the fun: We use curve-maps in many places - modifiers, brush falloffs, particles, motion-blur shutter, ... Most of it stored in files. We may have broken compatibility for many files.

Argh, that must be why that code is place right under a comment /** \name F-Curve Calculations and declared in BKE_fcurve.h.

I also found that same commit while bisecting, so it's definitely caused by that.

The changes in correct_bezpart() assumed that the pre-existing curves were corrected by the versioning code. This wasn't done for non-FCurve curves, hence the changed results. The good news is that this means that the in-file data hasn't been modified (at least not by the versioning code), and that thus a rollback of the changes in correct_bezpart() will produce the correct results again. At least it does so for the test file Simon uploaded.

I'll put the old (pre- da95d1d851) function into curve.c and call it BKE_curve_correct_bezpart(), and name the FCurve-specific function BKE_fcurve_correct_bezpart().

Argh, that must be why that code is place right under a comment `/** \name F-Curve Calculations` and declared in `BKE_fcurve.h`. I also found that same commit while bisecting, so it's definitely caused by that. The changes in `correct_bezpart()` assumed that the pre-existing curves were corrected by the versioning code. This wasn't done for non-FCurve curves, hence the changed results. The good news is that this means that the in-file data hasn't been modified (at least not by the versioning code), and that thus a rollback of the changes in `correct_bezpart()` will produce the correct results again. At least it does so for the test file Simon uploaded. I'll put the old (pre- da95d1d851) function into `curve.c` and call it `BKE_curve_correct_bezpart()`, and name the FCurve-specific function `BKE_fcurve_correct_bezpart()`.

This issue was referenced by 91af828e8b

This issue was referenced by 91af828e8bfaa04cbd49f1859e06a1f76749102d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81743
No description provided.